--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <form>
       <h1>Ayuda general</h1><br>
         ¡Hola! Te saluda JeffreyG / JeffreyGMD. ¡Gracias por descargar este administrador de GDPS!<br>
-        Intenté que fuera lo más sencillo posible para cualquiera. A continuación te diré lo primero que debes hacer para que esto enpiece a funcionar.<br><br>
+        Intenté que fuera lo más sencillo posible para cualquiera. A continuación te diré lo primero que debes hacer para que esto empieze a funcionar.<br><br>
 
         1. Ve al archivo conx.php y cambia los datos a los de la database de tu GDPS. Y además la contraseña secreta. 🤫<br>
         2. Luego de que tengas los datos listos, sube el archivo actualizado a la página web. <br>
