English language avaible now!

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <font size="6">
     <form>
       <h1>Ayuda general</h1><br>
+      <h2><a href="en.html">This is not your lenguage?</a></h2>
         ¡Hola! Te saluda JeffreyG / JeffreyGMD. ¡Gracias por descargar este administrador de GDPS!<br>
         Intenté que fuera lo más sencillo posible para cualquiera. A continuación te diré lo primero que debes hacer para que esto empieze a funcionar.<br><br>
 
