--- a/en.html
+++ b/en.html
@@ -11,7 +11,7 @@
   <body>
     <font size="6">
     <form>
-      <h1>Ayuda general</h1><br>
+      <h1>General help</h1><br>
       <h2><a href="index.html">¿Este no es tu idioma?</a></h2>
       Hello! Its JeffreyG / JeffreyGMD. Thank you for downloading this GDPS administrator!<br>
         I tried to make it as simple as possible for anyone. Then I will tell you the first thing you must do to make this work.<br><br>
