--- a/en.html
+++ b/en.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="es" dir="ltr">
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>¡Gracias!</title>
+    <title>Thank you!</title>
   	<link rel="stylesheet" href="CSS/estilos.css">
   	<link rel="stylesheet" href="CSS/layout.css">
   	<link rel="stylesheet" href="CSS/desplegable.css">
