Nueva barra de navegación agregada

--- a/en.html
+++ b/en.html
@@ -18,9 +18,10 @@
 
         1. Go to the conx.php file and change the data to the database of your GDPS, the lenguage and also the secret password. 🤫<br>
         2. After you have the data ready, upload the updated file to the web page. <br>
-        3. To verify that the data is correct and that the db (database) is connected to the web page, enter to chkCon.php file <b>From the browser.</b><br>
-        4. Remove this file; "en.html" AND "index.html" <b>DO NOT ELIMINATE THE FILE <i>INDEX.PHP</i></b>. <br>
-        5. Go to index.php and enjoy. 🙂 <br><br>
+        3. Change the link on "root" variable at conx.php, by the link where your tool is installed.<br>
+        4. To verify that the data is correct and that the db (database) is connected to the web page, enter to chkCon.php file <b>From the browser.</b><br>
+        5. Remove this file; "en.html" AND "index.html" <b>DO NOT ELIMINATE THE FILE <i>INDEX.PHP</i></b>. <br>
+        6. Go to index.php and enjoy. 🙂 <br><br>
 
         <i>It only supports the files of <a href="https://github.com/Cvolton/GMDprivateServer" target="_blank">GDPS Cvolton</a></i>
       <br><br>
