--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 
         1. Ve al archivo conx.php y cambia los datos a los de la database de tu GDPS. Y además la contraseña secreta. 🤫<br>
         2. Luego de que tengas los datos listos, sube el archivo actualizado a la página web. <br>
-        3. Para verificar que los datos sean correctos y que sí está conectada la db (base de datos) a la página web, entra al archivo chkCon.php <b>Desde el navegador.</b><br>
-        4. Elimina este archivo; "index.html" y también "en.html" <b>NO ELIMINES EL ARCHIVO <i>INDEX.PHP</i></b>. <br>
-        5. Entra a index.php y disfruta. 🙂 <br><br>
+        3. Cambia el link en la variable "root" en conx.php, por el link donde está instalada la herramienta en tu página.
+        4. Para verificar que los datos sean correctos y que sí está conectada la db (base de datos) a la página web, entra al archivo chkCon.php <b>Desde el navegador.</b><br>
+        5. Elimina este archivo; "index.html" y también "en.html" <b>NO ELIMINES EL ARCHIVO <i>INDEX.PHP</i></b>. <br>
+        6. Entra a index.php y disfruta. 🙂 <br><br>
 
         <i>Sólo es compatible con los archivos de <a href="https://github.com/Cvolton/GMDprivateServer" target="_blank">GDPS Cvolton</a></i>
       <br><br>
